--- a/FoodWebApi/FoodWebApi.csproj
+++ b/FoodWebApi/FoodWebApi.csproj
@@ -25,4 +25,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="wwwroot\" />
+    <Content Remove="wwwroot\Images\" />
+  </ItemGroup>
 </Project>
