Added redis cache

--- a/FoodWebApi/appsettings.json
+++ b/FoodWebApi/appsettings.json
@@ -7,10 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FoodDbConnection": "Data Source=localhost;Initial Catalog=FoodApiDb;User ID=sa;Password=P@ssword;TrustServerCertificate=True;"
+    "FoodDbConnection": "Data Source=localhost;Initial Catalog=FoodApiDb;User ID=sa;Password=P@ssword;TrustServerCertificate=True;",
+    "RedisConnection": "localhost:90"
   },
   "StaticFilesSection": {
     "Path": "Images"
+  },
+  "Redis": {
+    "InstanceName": "localfood_"
   }
 }
 
