Added ElasticSearch for Dishes

--- a/FoodWebApi/appsettings.json
+++ b/FoodWebApi/appsettings.json
@@ -15,6 +15,12 @@
   },
   "Redis": {
     "InstanceName": "localfood_"
+  },
+  "ESConfiguration": {
+    "Url": "http://localhost:9200",
+    "Index": "dishes",
+    "UserName": "elastic",
+    "Passoword": ""
   }
 }
 
