--- a/FoodWebApi/FoodWebApi.csproj
+++ b/FoodWebApi/FoodWebApi.csproj
@@ -26,6 +26,8 @@
     <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.11" />
+    <PackageReference Include="NEST" Version="7.17.5" />
+    <PackageReference Include="Elasticsearch.Net" Version="7.17.5" />
   </ItemGroup>
 
   <ItemGroup>
